--- a/.github/workflows/new_stats_docker.yaml
+++ b/.github/workflows/new_stats_docker.yaml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/threefoldtech/newstats
+          images: ghcr.io/hossnys/newstats
           tags: |
             type=semver,pattern={{version}}
       - name: Build and push Docker image
