--- a/packages/new_stats/chart/values.yaml
+++ b/packages/new_stats/chart/values.yaml
@@ -4,7 +4,7 @@ image:
   repository: ghcr.io/threefoldtech/newstats
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "0.0.1"
 
 imagePullSecrets: []
 nameOverride: ""
